Fix extraneous overflow attribute
This creates lot of unecessary empty scrollbars at least under Firefox
and Chromium on Linux.

--- a/frontend/assets/hashi-ui.css
+++ b/frontend/assets/hashi-ui.css
@@ -99,7 +99,7 @@ th {
   border: 0;
   width: 100%;
   margin-bottom: 15px;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
   -ms-overflow-style: -ms-autohiding-scrollbar;
   -webkit-overflow-scrolling: touch;
